--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
    <body style="background-color:rgb(212, 240, 234);">
-	   <h1> Thank You God and Universe you have given me Everything! God SPEED </h1>
+	   <h1> Thank You God and Universe you have given me Everything! God SPEED ...... </h1>
 	   <h1>Welcome to Stack Simplify - Azure DevOps App1 - V21 Python Application</h1>
       <h2>Azure DevOps Demo App1</h2>
       <h2>Application Version: V21</h2>
