--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
    <body style="background-color:rgb(212, 240, 234);">
 	   <h1> Thank You God and Universe you have given me Everything! God SPEED .......... </h1>
+	   <h1> Today we offered our Prayers to Ramanuj Jee Temple , Hyderabad , Telangana .. </h1>
 	   <h1>Welcome to our Home - Jyoti,Rahul,Aarvi,Rudra - Azure DevOps App1 - V21 Python Application</h1>
       <h2>Azure DevOps Demo App1</h2>
       <h2>Application Version: V21</h2>
